--- Version 0.5.0d - May-10-2009
- Fixed: Container of detached windows would sometimes remain after reattaching
- Fixed: Global toolbar style was not honored
- Fixed: Auto-scroll missing in progress dialogs and data editor
- Fix jumping toolbar
- Fixed: Several harmless warnings were silenced
- Fixed: Argument hints would always stay on top regardless of focus
- Fix crash when reaching bottom of command history in context sensitive search
- Fix crash while inserting rows in a data.frame with string variables

--- Version 0.5.0c - Mar-30-2009
- Fix assorted installation problems
- Updated translations: German, Spanish
- Fix immediate crash issue with R 2.9.0 (requires recompilation against R 2.9)
- Fixed some shortcut problems with KDElibs 4.2.x
- Fixed: Several icons would not be loaded
- Fix device window capturing Qt 4.4.3 (possibly other versions were broken as well)
- Fix device window capturing with R 2.8.0
- Extended boxplot plugin
- Support data.frames in barplot plugin
- New set of plugins: Item Response Theory (by Meik Michalke)

--- Version 0.5.0b - Apr-20-2008
- Support compilation with R 2.7
- New plugin: Hodrick-Prescott Filter
- Fix a problem with plugin help pages not loading correctly
- Better resize handling in progress and R input (readline()) dialogs
- Somewhat better handling of the R event loop (esp. when calling "require(not_yet_installed_package)")

--- Version 0.5.0a - Jan-23-2008
- Fixed: no objects were selectable in most varslots
- Compilation: check for minimum kdelibs version during cmake stage

--- Version 0.5.0 - Jan-21-2008
- add support for a focus-follows-mouse activation behavior of the MDI windows (Settings->General)
- ability to mark arbitrary "blocks" in script editor and run them with a shortcut
- make sure that R only handles SIGSEV, when the R thread is active. Should give better backtraces and less hangs
- object viewer was redesigned to use space better, and only fetch the print-representation when needed